--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
           <ul class="list-group list-group-flush">
             <li class="list-group-item">Cras justo odio</li>
           </ul>
+
+          <div class="card-body">
+            <form>
+              <div class="form-group">
+                <input type="email" class="form-control" placeholder="type ....">
+              </div>
+              <button type="submit" class="btn btn-primary">Add</button>
+            </form>
+
+          </div>
+
+
         </div>
 
       </div>
